--- a/AvatarCLIP.ipynb
+++ b/AvatarCLIP.ipynb
@@ -120,11 +120,7 @@
     "# @title Setup the Environment: 3. some additional housekeeping and imports\n",
     "!pip install -U numpy\n",
     "!pip install scikit-image\n",
-    "!pip install git+https://github.com/hongfz16/neural_renderer\n",
-    "\n",
-    "# the next lines then need to be run in a terminal\n",
-    "# apt-get update && apt-get install libgl1\n",
-    "# apt install ffmpeg"
+    "!pip install git+https://github.com/hongfz16/neural_renderer\n"
    ],
    "outputs": [],
    "metadata": {
@@ -136,6 +132,21 @@
      "shell.execute_reply.started": "2022-06-03T21:35:38.285795Z"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# Use this if you have a terminal, put it in a terminal\n",
+    "# !apt-get update && apt-get --yes install libgl1\n",
+    "# !pip install ffmpeg\n",
+    "\n",
+    "# Use this on free notebook\n",
+    "!pip install opencv-python-headless\n",
+    "!pip install ffmpeg"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
